--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="me.androidbox.busbycryptotracker">
 
     <application
         android:allowBackup="true"
@@ -13,7 +15,7 @@
         android:theme="@style/Theme.CryptoTracker"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="me.androidbox.busbycryptotracker.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.CryptoTracker">
