--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="me.androidbox.busbycryptotracker">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
+        android:name=".BusbyCryptoTrackerApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
